<resources>
    <string name="app_name">pc2ss</string>
    <string name="valtviniciarsesion">INICIAR SESIÓN</string>
    <string name="valetdni">Ingrese su DNI</string>
    <string name="valetclave">Ingrese su clave</string>
    <string name="valbtningresar">INGRESAR</string>
    <string name="valbtncrearcuenta">CREAR UNA CUENTA</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_registro">Registro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valetingresedni">Ingrese su DNI</string>
    <string name="valetingresarnombrecompleto">Ingrese su nombre completo</string>
    <string name="valetingreseclave">Ingrese su clave</string>
    <string name="valetingresenuevamenteclave">Ingrese nuevamente su clave</string>
    <string name="valbtnregistrarcuenta">REGISTRAR CUENTA</string>
</resources>